--- a/resources/public/base.css
+++ b/resources/public/base.css
@@ -58,6 +58,10 @@ a:hover {
   border-left: 1px solid #F1F1F1;
 }
 
+.tea-color h3 {
+  margin-top: 5px;
+}
+
 .green-tea {
   background: #058262;
 }
@@ -102,6 +106,41 @@ a:hover {
 
 .white-text {
   color: white;
+}
+
+.tips h2 {
+  margin-top: 0px;
+}
+
+.tips ul {
+  list-style-type: circle;
+  padding-left:20px;
+}
+
+.tips li {
+  font-size:20px;
+  margin-bottom:20px;
+}
+
+.get-in-touch p {
+  font-size:14px !important;
+  margin-bottom: 0px;
+}
+
+#order-banner {
+  background-image: url("banner.png");
+  background-size: cover;
+  background-color: #131313;
+  margin-top: -60px;
+  padding-top: 60px;
+  height: 300px;
+  text-align: center;
+}
+
+#order-banner h1 {
+  font-size: 52px;
+  color: white;
+  text-shadow: 2px 2px #131313;
 }
 
 .footer {
